--- a/lessons1/index.html
+++ b/lessons1/index.html
@@ -8,32 +8,46 @@
 </head>
 
 <body>
+<header>
     <div class="wrapper">
-        <header class="header">
+        <div class="header">
             <div class="logo">
-                <h1>Стеценко <span>Дмитрий Владимирович</span></h1>
+                <h1>Гонтар <span>Максим Миколайович</span></h1>
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">Данные</a></li>
-                    <li><a href="#">Учеба</a></li>
-                    <li><a href="#">Работа</a></li>
+                    <li><a class="current-page" href="#">Дані</a></li>
+                    <li><a href="#">Навчання</a></li>
+                    <li><a href="#">Робота</a></li>
                 </ul>
             </div>
-        </header>
-        <main class="main">
+        </div>
+    </div>
+</header>
+<main>
+    <div class="wrapper">
+        <div class="main">
+            <div class="main-left">
             <div class="photo">
-                <img src="img/photo.jpg">
             </div>
             <div class="info">
-                <p>phone : <span>099-233-12-12</span></p>
-                <p>e-mail : <span>domain@gmail.com</span></p>
+                <p>phone :&emsp; <span>099-233-12-12</span></p>
+                <p>e-mail :&emsp; <span>domain@gmail.com</span></p>
             </div>
-        </main>
-        <footer class="footer">
-            <p>copyright 2018</p>
-        </footer>
+            </div>
+            <div class="main-right">
+                Some Text
+            </div>
+        </div>
     </div>
+</main>
+<footer>
+    <div class="wrapper">
+        <div class="footer">
+            <p>copyright 2018</p>
+        </div>
+    </div>
+</footer>
 </body>
 
 </html>
