Lesson 4. Responsive site

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <a href="./lessons1">Lesson 1</a>
         <a href="./lessons2">Lesson 2</a>
         <a href="./lessons3">Lesson 3</a>
+        <a href="./lessons4">Lesson 4</a>
 </div>
 </body>
 </html>
