--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <a href="./lessons2">Lesson 2</a>
         <a href="./lessons3">Lesson 3</a>
         <a href="./lessons4">Lesson 4</a>
+        <a href="./lessons5/index.html">Lesson 5-1</a>
+        <a href="./lessons5/index2.html">Lesson 5-2</a>
 </div>
 </body>
 </html>
